fix .sending height on smaller screens

--- a/src/components/styles/contact.module.css
+++ b/src/components/styles/contact.module.css
@@ -6,6 +6,9 @@
     --headerAndFormWidth: 95%;
   }
 }
+.componentContainer {
+  position: relative;
+}
 .contactContainer {
   background-color: var(--darkBackground);
 }
@@ -56,8 +59,10 @@
 .sending {
   position: absolute;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-width: 100vw;
+  height: 100%;
+  min-height: 100vh;
   display: none;
   opacity: 0;
   justify-content: center;
